# mo-3

./: .gitignore  Makefile  pyproject.toml  readme.md  report.md
results/: optuna_adam_study.csv  optuna_sgd_study.csv
src/: main.py
